Added current time

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -1,6 +1,6 @@
 :root {
     --vp-home-hero-name-color: #2fb585;
     --vp-button-brand-bg: #2fb585;
-    --vp-button-brand-hover-bg: #354b5d;
+    --vp-button-brand-hover-bg: #000203;
     --vp-c-brand: #2fb585;
 }
